[gd_scene load_steps=53 format=3 uid="uid://duoospejbeo0t"]

[ext_resource type="Material" uid="uid://duh0xxtb21cug" path="res://Assets/Materials/PlayerCar.tres" id="1_vb600"]
[ext_resource type="ArrayMesh" uid="uid://dbkbutiyvkc4o" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarBodyPlayer.obj" id="2_mq41k"]
[ext_resource type="ArrayMesh" uid="uid://drmaajb32b5nv" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarDoorPlayer.obj" id="3_u7x6o"]
[ext_resource type="Script" path="res://Scripts/CarDoor.gd" id="4_3ldg1"]
[ext_resource type="Material" uid="uid://cwo0dk0bsf5e1" path="res://Assets/Materials/PerfectOutline.tres" id="5_ffxj2"]
[ext_resource type="ArrayMesh" uid="uid://bpumhcy83xlu5" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarHood.obj" id="6_jfqj7"]
[ext_resource type="ArrayMesh" uid="uid://fjdmyp1lnv4c" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarHoodInterior.obj" id="7_15bd7"]
[ext_resource type="Script" path="res://Scripts/Hood.gd" id="7_ax6x3"]
[ext_resource type="ArrayMesh" uid="uid://b1anxdux6c88j" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarInterior2.obj" id="8_4q7no"]
[ext_resource type="ArrayMesh" uid="uid://5cpjdphq1kux" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarInterior3.obj" id="9_4wi28"]
[ext_resource type="ArrayMesh" uid="uid://momowse0ljea" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarWindow.obj" id="10_4l1b5"]
[ext_resource type="Script" path="res://Scripts/SteeringWheel.gd" id="11_2tmgn"]
[ext_resource type="ArrayMesh" uid="uid://bplsibnom3pl1" path="res://Assets/PlayerObjects/PlayerCar/Models/M_GasCap.obj" id="11_l0me1"]
[ext_resource type="ArrayMesh" uid="uid://yhmpw8jexwjb" path="res://Assets/PlayerObjects/PlayerCar/Models/M_GasIntake.obj" id="12_kp0iv"]
[ext_resource type="ArrayMesh" uid="uid://bi5jikhfvlko6" path="res://Assets/PlayerObjects/PlayerCar/Models/M_Steering.obj" id="13_3bkhn"]
[ext_resource type="Script" path="res://Scripts/GasIntake.gd" id="13_n0en5"]
[ext_resource type="ArrayMesh" uid="uid://b7lf47ytya0od" path="res://Assets/PlayerObjects/PlayerCar/Models/M_CarInterior1.obj" id="14_ba7ag"]
[ext_resource type="Material" uid="uid://by51qtnhyba6q" path="res://Assets/Materials/Tire.tres" id="15_rbyfn"]
[ext_resource type="ArrayMesh" uid="uid://ck1w537dq7hes" path="res://Assets/PlayerObjects/SpareTire/Models/M_SpareTire_Unwrapped.obj" id="16_lukmh"]
[ext_resource type="Script" path="res://Scripts/HotWireGame.gd" id="17_4rwam"]
[ext_resource type="FontFile" uid="uid://41y7qinwa7cl" path="res://Assets/Fonts/Perfect_DOS_VGA_437.ttf" id="18_w3f54"]
[ext_resource type="Texture2D" uid="uid://b8lpi3qwwdkek" path="res://Assets/UI/LMB_icon.png" id="19_ekjm7"]
[ext_resource type="AudioStream" uid="uid://talggt083dq8" path="res://Assets/Audio/SFX/old-maruti-car-unlock-sound-keyless-entry-beep-327691.mp3" id="20_8bh84"]
[ext_resource type="Script" path="res://Scripts/CarKeyNoise.gd" id="21_delra"]
[ext_resource type="Texture2D" uid="uid://s6l2xtthrhqh" path="res://Assets/UI/gas_meter.png" id="24_hjdpm"]
[ext_resource type="Texture2D" uid="uid://ddmplpodjmab2" path="res://Assets/Enviroments/Garage/Textures/Gas Canister Textures/M_GasCanister_Unwrapped_BaseColor.png" id="25_jkl06"]
[ext_resource type="Texture2D" uid="uid://d3ro2o2m8re01" path="res://Assets/Enviroments/Garage/Textures/Gas Canister Textures/M_GasCanister_Unwrapped_Metalic_and_Rougness.png" id="26_t1aiq"]
[ext_resource type="Texture2D" uid="uid://c7kadnkgs7vd" path="res://Assets/Enviroments/Garage/Textures/Gas Canister Textures/M_GasCanister_Unwrapped_Normal.png" id="27_y5w2q"]
[ext_resource type="ArrayMesh" uid="uid://dbycyrk8r50pw" path="res://Assets/Enviroments/Garage/Models/M_GasCanister_Alternate.obj" id="28_7tpjn"]
[ext_resource type="Script" path="res://Scripts/GasIntakeCanister.gd" id="29_0ihrx"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_g24yh"]
points = PackedVector3Array(76.246, 36.1877, -222.496, 63.6572, 113.606, 57.5605, -80.0256, 14.567, -209.948, -55.4504, 108.142, -122.68, -85.1832, -3.91766, 245.608, 79.4691, 1.66622, -81.4544, -53.8358, 58.7649, 245.608, -61.6956, 113.606, 57.5605, -85.1832, 58.7649, -224.486, 87.1447, 58.7649, -208.779, 87.1447, -3.91766, 237.754, 87.1447, 50.948, 229.901, 51.1277, 108.934, -124.945, -71.9297, 7.7253, -214.96, 95.0046, 19.5944, -169.658, -85.1832, 58.7649, 214.242, -93.0431, -3.91766, 182.926, 47.9927, 74.4233, -224.486, 16.6453, 58.7649, 253.413, 66.6105, 7.7253, -214.96, -93.0431, 11.753, -169.658, 87.1447, 74.4233, 10.6345, -78.7439, 0.766771, -83.0272, 95.0046, 11.753, 182.926, -5.91976, 114.056, -99.0327, -46.0311, 74.4233, -224.486, 47.9927, -3.91766, 253.413, 79.3217, 50.948, 245.608, -74.336, 28.6335, 251.891, 63.1412, 107.106, -85.1512, -30.3482, 113.606, 65.3651, 71.4986, 105.777, 65.3651)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_lo0w8"]
points = PackedVector3Array(-16.6516, 50.1256, -104.451, -7.90447, 21.9234, -0.293335, -9.70029, -43.6728, -92.284, 16.354, 24.0614, -15.8632, -28.8209, 64.0229, -57.5425, -7.96245, -45.4141, 1.5128, 2.45133, -3.71135, -94.0237, -28.8209, 65.7642, -106.202, -1.02435, -33.2471, 1.5128, -13.176, 31.0155, -3.70633, -6.23345, -40.6942, -90.4848, 16.354, 18.8595, -10.6546, -20.1273, 60.5513, -106.202, 14.6162, 27.5439, -15.8632, -4.50003, 24.0614, -95.7634, -27.0831, 62.2817, -48.8755, -9.70029, -40.2012, -5.44604, 0.713486, 4.97309, 1.5128, -28.8209, 62.2817, -57.5425, 1.44293, -15.9217, -89.1843, -13.176, 20.5898, -1.96662, -28.8209, 65.7642, -64.4908, -28.8209, 62.2817, -106.202, -20.1273, 50.1256, -28.0307, 16.354, 18.8595, -15.8632, -27.0831, 57.0688, -48.8755, -9.70029, -43.6728, -74.9185, 2.45133, -3.71135, 1.5128, 0.713486, 4.97309, -94.0237, -6.23345, -43.2742, -0.560414, -23.603, 57.0688, -106.202, -11.4381, 41.4412, -99.2323)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_185we"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_a007y"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_864t3"]
points = PackedVector3Array(42.347, 40.4188, 67.3872, 46.602, 72.9072, 73.7767, 43.8569, 53.0363, 80.5716, 62.6877, 55.3301, 70.0329, 28.9628, 56.9346, 68.9692, 57.9377, 45.7132, 66.4845, 33.1445, 68.2456, 74.3714, 57.7983, 67.055, 70.5831, 57.3763, 43.4576, 70.4301, 31.4568, 47.9654, 71.5574, 57.9377, 68.2456, 74.3714, 44.4183, 38.9497, 69.8664, 62.4429, 54.729, 72.6847, 40.298, 70.5618, 71.1491, 33.1445, 45.7132, 66.4845, 28.6393, 54.729, 72.6847, 47.2253, 53.0363, 80.5716, 33.1445, 43.4576, 70.4301, 45.0133, 72.2925, 74.834, 46.6082, 40.3344, 66.283, 33.2839, 67.055, 70.5831, 50.0499, 71.6308, 74.935, 46.076, 73.0471, 72.1742, 62.1189, 56.9345, 68.9693, 41.0323, 71.6308, 74.935, 46.6639, 38.9497, 69.8664, 58.0156, 43.9338, 68.3659, 30.8884, 62.6116, 73.8077, 60.1938, 62.6116, 73.8077, 58.5026, 45.1467, 70.9937, 28.3943, 55.3301, 70.0329, 44.5849, 51.0985, 79.4843)

[sub_resource type="Animation" id="Animation_ykfaq"]
resource_name = "GettinginCar"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Car_Cam:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Car_Cam:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(136.004, 125.951, -10.0913), Vector3(114.848, 103.61, -36.4791), Vector3(93.6913, 81.2687, 19.3915), Vector3(37.2936, 93.3981, 14.78)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.523599, 1.5708, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DriverDoor:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.81753, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vm5x0"]
resource_name = "HotWireFlash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mesh/StartCar/CollisionShapeMesh:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.03333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_2du3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Car_Cam:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.5, 2, -0.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Car_Cam:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.523599, 1.5708, -6.02223e-08)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.66487, 2.10038, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.27356, -1.60392, -0.00895053)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Mesh/CarDoor/CollisionShapeMesh:transparency")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Mesh/StartCar/CollisionShapeMesh:transparency")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Mesh/Hood/CollisionShapeMesh:transparency")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("DriverDoor:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ifl34"]
resource_name = "resetingstuff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Car_Cam:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.523599, 1.5708, -6.02223e-08)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tr6wb"]
_data = {
"GettinginCar": SubResource("Animation_ykfaq"),
"HotWireFlash": SubResource("Animation_vm5x0"),
"RESET": SubResource("Animation_2du3w"),
"resetingstuff": SubResource("Animation_ifl34")
}

[sub_resource type="Animation" id="Animation_d1s73"]
resource_name = "Hood"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hood:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.838526, 0, 0)]
}

[sub_resource type="Animation" id="Animation_u1bym"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hood:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_85pm2"]
_data = {
"Hood": SubResource("Animation_d1s73"),
"RESET": SubResource("Animation_u1bym")
}

[sub_resource type="Animation" id="Animation_5wi3a"]
resource_name = "GasCap"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GasCap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(81.1291, 47.5358, -172.055), Vector3(81.1291, 47.5358, -172.055)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GasCap:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.45993, 0)]
}

[sub_resource type="Animation" id="Animation_qqahc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GasCap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(81.1291, 47.5358, -172.055)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GasCap:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ia1i"]
_data = {
"GasCap": SubResource("Animation_5wi3a"),
"RESET": SubResource("Animation_qqahc")
}

[sub_resource type="Animation" id="Animation_sseij"]
resource_name = "MouseClicking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_j10hk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t71il"]
_data = {
"MouseClicking": SubResource("Animation_sseij"),
"RESET": SubResource("Animation_j10hk")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avy10"]
albedo_color = Color(0.6, 0.0156863, 0.0156863, 1)

[sub_resource type="BoxMesh" id="BoxMesh_4retf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u1oae"]
albedo_texture = ExtResource("25_jkl06")
metallic = 1.0
metallic_texture = ExtResource("26_t1aiq")
metallic_texture_channel = 2
roughness_texture = ExtResource("26_t1aiq")
roughness_texture_channel = 1
normal_enabled = true
normal_texture = ExtResource("27_y5w2q")
ao_enabled = true
ao_texture = ExtResource("26_t1aiq")

[node name="Car" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.588226, 2.78289, -0.948975)

[node name="Body" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("2_mq41k")

[node name="StaticBody3D" type="StaticBody3D" parent="Body"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_g24yh")

[node name="DriverDoor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 86.2867, 44.702, 97.0475)
material_override = ExtResource("1_vb600")
mesh = ExtResource("3_u7x6o")

[node name="DriverDoor" type="StaticBody3D" parent="DriverDoor" node_paths=PackedStringArray("mesh")]
script = ExtResource("4_3ldg1")
outline_material = ExtResource("5_ffxj2")
mesh = NodePath("..")
has_outline = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="DriverDoor/DriverDoor"]
shape = SubResource("ConvexPolygonShape3D_lo0w8")

[node name="Hood" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 63.8201, 133.336)
material_override = ExtResource("1_vb600")
mesh = ExtResource("6_jfqj7")

[node name="Hood" type="StaticBody3D" parent="Hood" node_paths=PackedStringArray("mesh")]
script = ExtResource("7_ax6x3")
outline_material = ExtResource("5_ffxj2")
mesh = NodePath("..")
has_outline = true

[node name="HoodCollisionShape3D" type="CollisionShape3D" parent="Hood/Hood"]
transform = Transform3D(152.097, 0, 0, 0, 18.8542, 118.808, 0, -94.5967, 23.6797, 6.09027, -27.2392, 39.9529)
shape = SubResource("ConvexPolygonShape3D_185we")

[node name="GasCap" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 81.1291, 47.5358, -172.055)
material_override = ExtResource("1_vb600")
mesh = ExtResource("11_l0me1")

[node name="GasCap" type="StaticBody3D" parent="GasCap" node_paths=PackedStringArray("mesh")]
script = ExtResource("13_n0en5")
outline_material = ExtResource("5_ffxj2")
mesh = NodePath("..")
has_outline = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="GasCap/GasCap"]
transform = Transform3D(23.4346, 0, 0, 0, 23.4346, 0, 0, 0, 23.4346, 0.217148, 3.86193, 5.55759)
shape = SubResource("ConvexPolygonShape3D_a007y")

[node name="SteeringWheel" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("13_3bkhn")

[node name="SteeringWheel" type="StaticBody3D" parent="SteeringWheel" node_paths=PackedStringArray("mesh")]
script = ExtResource("11_2tmgn")
outline_material = ExtResource("5_ffxj2")
mesh = NodePath("..")
has_outline = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="SteeringWheel/SteeringWheel"]
shape = SubResource("ConvexPolygonShape3D_864t3")

[node name="HoodInterior" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("7_15bd7")

[node name="PassengerDoor" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("8_4q7no")

[node name="BackCarInterior" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("9_4wi28")

[node name="CarWindow" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
transparency = 0.59
mesh = ExtResource("10_4l1b5")

[node name="GasIntake" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("12_kp0iv")

[node name="Seating" type="MeshInstance3D" parent="."]
material_override = ExtResource("1_vb600")
mesh = ExtResource("14_ba7ag")

[node name="Tire_1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -70.2275, 7.82731, 150.71)
material_override = ExtResource("15_rbyfn")
mesh = ExtResource("16_lukmh")

[node name="Tire_2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 72.6544, 7.82731, 150.71)
material_override = ExtResource("15_rbyfn")
mesh = ExtResource("16_lukmh")

[node name="Tire_3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 69.8844, 7.05181, -123.959)
material_override = ExtResource("15_rbyfn")
mesh = ExtResource("16_lukmh")

[node name="Tire_4" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -70.2275, 7.82731, -124.647)
material_override = ExtResource("15_rbyfn")
mesh = ExtResource("16_lukmh")

[node name="GetInCarAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tr6wb")
}

[node name="HoodAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_85pm2")
}

[node name="GasCapAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ia1i")
}

[node name="CarKeyNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_8bh84")
script = ExtResource("21_delra")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(-0.0306996, -0.270298, -0.962287, -0.00861759, 0.962777, -0.270161, 0.999492, -1.21724e-06, -0.0318861, 2.66487, 2.10038, 0)

[node name="Car_Cam" type="Camera3D" parent="Head"]
transform = Transform3D(-3.58988e-06, -0.5, 0.866025, -5.2154e-08, 0.866025, 0.5, -1, 1.74977e-06, -3.135e-06, 2.5, 2, -0.1)
current = true

[node name="InteractRay" type="RayCast3D" parent="Head/Car_Cam"]
target_position = Vector3(0, 0, -4)

[node name="Minigame" type="Control" parent="Head/Car_Cam"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("17_4rwam")

[node name="Item1" type="ColorRect" parent="Head/Car_Cam/Minigame"]
visible = false
layout_mode = 0
offset_left = 156.0
offset_top = 97.0
offset_right = 196.0
offset_bottom = 137.0
color = Color(0.570529, 0, 0.0720512, 1)

[node name="Item2" type="ColorRect" parent="Head/Car_Cam/Minigame"]
visible = false
layout_mode = 0
offset_left = 1108.0
offset_top = 331.0
offset_right = 1148.0
offset_bottom = 371.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Head/Car_Cam/Minigame"]
layout_mode = 0
offset_left = 524.0
offset_top = 248.0
offset_right = 667.0
offset_bottom = 279.0
text = "HOT WIRE CONFIRM"

[node name="HoodCam" type="Camera3D" parent="."]
transform = Transform3D(1, 2.98023e-08, -1.49012e-08, 7.66307e-09, 0.229523, 0.973303, 3.24269e-08, -0.973303, 0.229523, -36.2005, 93.6456, 174.394)

[node name="HoodGame" type="Control" parent="HoodCam"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 435.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HoodCam/HoodGame"]
layout_mode = 0
offset_left = 86.0
offset_top = 1.0
offset_right = 1182.0
offset_bottom = 127.0
theme_override_fonts/font = ExtResource("18_w3f54")
theme_override_font_sizes/font_size = 39
text = "* Click then drag flashing wire to flashing red
* Avoid bright white on battery
* Press ESC to leave minigame with progress intact"

[node name="WheelCam" type="Camera3D" parent="."]
transform = Transform3D(0.0100878, 0, 0.999949, 0, 1, 0, -0.999949, 0, 0.0100878, 152.461, 10.8967, 146.987)

[node name="GasIntakeCam" type="Camera3D" parent="."]
transform = Transform3D(-3.41347e-08, -0.624643, 0.78091, -2.73041e-08, 0.78091, 0.624643, -1, -2.13163e-14, -4.37114e-08, 166.774, 110.041, -170.131)

[node name="GasIntakeGame" type="Control" parent="GasIntakeCam"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="GasIntakeCam/GasIntakeGame"]
layout_mode = 0
offset_left = 69.0
offset_top = 26.0
offset_right = 219.0
offset_bottom = 676.0
fill_mode = 3
texture_under = ExtResource("24_hjdpm")
texture_progress = ExtResource("24_hjdpm")
tint_progress = Color(1, 0, 0, 1)

[node name="Label" type="Label" parent="GasIntakeCam/GasIntakeGame"]
layout_mode = 0
offset_left = 279.0
offset_top = 29.0
offset_right = 947.0
offset_bottom = 95.0
theme_override_fonts/font = ExtResource("18_w3f54")
theme_override_font_sizes/font_size = 20
text = "Hold LMB to raise gas canister
*Align gas canister with red cube*
Press ESC to leave minigame with progress intact"
horizontal_alignment = 1

[node name="MouseClicking" type="Sprite2D" parent="GasIntakeCam/GasIntakeGame"]
texture_filter = 1
position = Vector2(606, 129)
texture = ExtResource("19_ekjm7")
hframes = 2

[node name="MouseClickingAnimationPlayer" type="AnimationPlayer" parent="GasIntakeCam/GasIntakeGame/MouseClicking"]
libraries = {
"": SubResource("AnimationLibrary_t71il")
}

[node name="GasIntakeSweetSpot" type="MeshInstance3D" parent="."]
transform = Transform3D(1.03919e-08, -4.20935, 0.294741, -1.64169e-07, -0.266453, -4.65625, 3.76326, -1.72816e-14, -2.03938e-07, 85.4225, 49.8965, -164.015)
visible = false
material_override = SubResource("StandardMaterial3D_avy10")
mesh = SubResource("BoxMesh_4retf")
skeleton = NodePath("../GasIntakeCanister")

[node name="GasIntakeCanister" type="MeshInstance3D" parent="."]
transform = Transform3D(29.4873, -59.801, 33.9966, -2.84403e-06, -36.9884, -65.0637, 68.789, 25.6345, -14.5731, 129.467, 86.6202, -191.245)
visible = false
material_override = SubResource("StandardMaterial3D_u1oae")
mesh = ExtResource("28_7tpjn")
script = ExtResource("29_0ihrx")

[connection signal="interacted" from="DriverDoor/DriverDoor" to="DriverDoor/DriverDoor" method="_on_interacted"]
[connection signal="interacted" from="Hood/Hood" to="Hood/Hood" method="_on_interacted"]
[connection signal="interacted" from="GasCap/GasCap" to="GasCap/GasCap" method="_on_interacted"]
[connection signal="interacted" from="SteeringWheel/SteeringWheel" to="SteeringWheel/SteeringWheel" method="_on_interacted"]
[connection signal="pressed" from="Head/Car_Cam/Minigame/Button" to="Head/Car_Cam/Minigame" method="_on_button_pressed"]
[connection signal="value_changed" from="GasIntakeCam/GasIntakeGame/TextureProgressBar" to="GasIntakeCanister" method="_on_progress_bar_value_changed"]
